--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,25 @@
     <meta charset="UTF-8">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    {% load static %}
-    <link rel="stylesheet" href='{% static "/css/style.css" %}'>
 
+<style>
+    .img-for_card{
+    background-repeat: no-repeat;
+    background-color: #f5f3f3;
+    min-height: 250px;
+    background-size: contain;
+    background-position: center center;
+}
+.stars{
+    font-size: 30px;
+}
+.container .display-3{
+    font-size: 3.5rem;
+}
+.footer{
+    background-color: #f5f3f3;
+}
+</style>
 </head>
 <body>
 
